summative.moria.Moria.scala.error
Erreur de compilation :
Moria:14: error: not found: value x
} while(x != 18)
        ^Moria:15: error: not found: value y
setPos(19, y + 1) 
           ^